applets/kicker/plugin/systemmodel.cpp
@@ -107,9 +107,9 @@ void SystemModel::populate()
 
         if (entry->isValid()) {
             m_entries << entry;
-            QObject::connect(entry, &SystemEntry::isValidChanged, this,
-                &AbstractModel::refresh, Qt::UniqueConnection);
         }
+        QObject::connect(entry, &SystemEntry::isValidChanged, this,
+            &AbstractModel::refresh, Qt::UniqueConnection);
     };
 
     addIfValid(SystemEntry::LockSession);
